# gstreamer_file_to_webm

./: CMakeLists.txt  StreamReader.cpp  StreamReader.h  main.cpp
